# atlas

./: .envrc  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  atlas-cardano.cabal  atlas.cabal  cabal.project  flake.nix  fourmolu.yaml  no-commit-to-main.sh  pull_request_template.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: -bug---short-description-of-the-problem.md  -docs--short-description-of-the-documentation-issue.md  -feature--short-description-of-the-feature.md
.github/workflows/: build.yml  haskell.yml  release.yml
data/compiled-scripts/: fake-coin.bp  read-oracle-validator.bp
fixtures/: script-env-v1.json  script-env-v2.json  script-v1.cbor  script-v2.cbor
haddock/: GeniusYield-Api-TestTokens.html  GeniusYield-CardanoApi-EraHistory.html  GeniusYield-CardanoApi-Query.html  GeniusYield-Examples-Gift.html  GeniusYield-Examples-Limbo.html  GeniusYield-Examples-Treat.html  GeniusYield-GYConfig.html  GeniusYield-HTTP-Errors.html  GeniusYield-Providers-CachedQueryUTxOs.html  GeniusYield-Providers-CardanoDbSync.html  GeniusYield-Providers-Common.html  GeniusYield-Providers-GCP.html  GeniusYield-Providers-Katip.html  GeniusYield-Providers-LiteChainIndex.html  GeniusYield-Providers-Maestro.html  GeniusYield-Providers-Node.html  GeniusYield-Providers-Sentry.html  GeniusYield-Providers-SubmitApi.html  GeniusYield-Providers.html  GeniusYield-Scripts-TestToken.html  GeniusYield-Test-Privnet-Asserts.html  GeniusYield-Test-Privnet-Ctx.html  GeniusYield-Test-Privnet-Examples-Gift.html  GeniusYield-Test-Privnet-Examples-Oracle.html  GeniusYield-Test-Privnet-Examples-Treat.html  GeniusYield-Test-Privnet-Examples.html  GeniusYield-Test-Privnet-Options.html  GeniusYield-Test-Privnet-Paths.html  GeniusYield-Test-Privnet-Setup.html  GeniusYield-Test-Privnet-Utils.html  GeniusYield-Test-Utils.html  GeniusYield-Transaction-CoinSelection-Types.html  GeniusYield-Transaction-CoinSelection.html  GeniusYield-Transaction-Common.html  GeniusYield-Transaction.html  GeniusYield-TxBuilder-Class.html  GeniusYield-TxBuilder-Common.html  GeniusYield-TxBuilder-Errors.html  GeniusYield-TxBuilder-Node.html  GeniusYield-TxBuilder-NodeQuery.html  (+58 more)
nix/: hix.nix
plutus/: CHANGELOG.md  LICENSE  README.md  atlas-onchain.cabal  cabal.project
plutus/app-plutustx/: Main.hs
plutus/atlas-onchain-common/: README.md  atlas-onchain-common.cabal
plutus/atlas-onchain-common/data/compiled-scripts/: bet-ref-validator.bp  test-token-policy.bp
plutus/atlas-onchain-common/src/GeniusYield/OnChain/BetRef/: Types.hs
plutus/atlas-onchain-common/src/GeniusYield/OnChain/GuessRefInputDatum/: Types.hs
plutus/data/compiled-scripts/: a-stake-validator.bp  guess-ref-input-datum-validator.bp
plutus/src-plutustx/GeniusYield/OnChain/: AStakeValidator.hs  BetRef.hs  FakeCoin.hs  GuessRefInputDatum.hs  TestToken.hs
plutus/src-plutustx/GeniusYield/OnChain/AStakeValidator/: Compiled.hs
plutus/src-plutustx/GeniusYield/OnChain/BetRef/: Compiled.hs
plutus/src-plutustx/GeniusYield/OnChain/Examples/ReadOracle/: Compiled.hs
plutus/src-plutustx/GeniusYield/OnChain/FakeCoin/: Compiled.hs
plutus/src-plutustx/GeniusYield/OnChain/GuessRefInputDatum/: Compiled.hs
plutus/src-plutustx/GeniusYield/OnChain/TestToken/: Compiled.hs
scripts/: run-privnet-tests.sh
src-plutustx/GeniusYield/OnChain/: AStakeValidator.hs  TestToken.hs  Utils.hs
src-plutustx/GeniusYield/OnChain/AStakeValidator/: Compiled.hs
src/GeniusYield/: Debug.hs  GYConfig.hs  Imports.hs  Providers.hs  ReadJSON.hs  Transaction.hs  TxBuilder.hs  Types.hs  Unsafe.hs  Utils.hs
src/GeniusYield/Aeson/: Utils.hs
src/GeniusYield/Api/: TestTokens.hs
src/GeniusYield/CardanoApi/: EraHistory.hs  Query.hs
src/GeniusYield/Clb/: Clb.hs  ClbLedgerState.hs  Era.hs  MockConfig.hs  Params.hs  TimeSlot.hs
src/GeniusYield/Examples/: Common.hs  Gift.hs  Limbo.hs  Treat.hs
src/GeniusYield/HTTP/: Errors.hs
src/GeniusYield/Providers/: Blockfrost.hs  CacheLocal.hs  CacheMempool.hs  CachedQueryUTxOs.hs  CardanoDbSync.hs  Common.hs  GCP.hs  Hydra.hs  Katip.hs  Kupo.hs  LiteChainIndex.hs  Maestro.hs  MaestroSDK.hs  Mempool.hs  Node.hs  Ogmios.hs  Sentry.hs  SubmitApi.hs
src/GeniusYield/Scripts/: TestToken.hs
src/GeniusYield/Swagger/: Utils.hs
src/GeniusYield/Test/: Address.hs  Clb.hs  FakeCoin.hs  FeeTracker.hs  Utils.hs
src/GeniusYield/Transaction/: CBOR.hs  CoinSelection.hs  Common.hs
src/GeniusYield/TxBuilder/: Class.hs  Clb.hs  Common.hs  Errors.hs  IO.hs  Node.hs  NodeQuery.hs  Random.hs  Run.hs  User.hs
src/GeniusYield/Types/: Ada.hs  Address.hs  Aeson.hs  Anchor.hs  Blueprint.hs  BuildScript.hs  BuildWitness.hs  Certificate.hs  Credential.hs  DRep.hs  DataStore.hs  Datum.hs  Delegatee.hs  Epoch.hs  Era.hs  Governance.hs  Hash.hs  Key.hs  KeyHash.hs  KeyRole.hs  Ledger.hs  Logging.hs  Natural.hs  NetworkId.hs  OpenApi.hs  PaymentKeyHash.hs  PlutusVersion.hs  Pool.hs  ProtocolParameters.hs  Providers.hs  PubKeyHash.hs  Rational.hs  Redeemer.hs  Reexpose.hs  Script.hs  Slot.hs  SlotConfig.hs  StakeAddressInfo.hs  StakeKeyHash.hs  StakePoolId.hs  (+12 more)
suite/: suite.hs
suite/BetRef/: Operations.hs
suite/BetRef/Tests/: PlaceBet.hs  TakePot.hs
suite/OnChain/: BetRef.hs  Compiled.hs
tests/: atlas-tests.hs
tests-privnet/: atlas-privnet-tests.hs
tests-unified/: atlas-unified-tests.hs
tests-unified/script/: bet_ref_validator.plutus
tests/GeniusYield/Test/: Blueprint.hs  BuildTxBodyContent.hs  CoinSelection.hs  Collateral.hs  Config.hs  FeeTracking.hs  GYTxBody.hs  GYTxOutRefCbor.hs  GYTxSkeleton.hs  Hydra.hs  Providers.hs  RefInput.hs  SimpleScript.hs  SlotConfig.hs  Stake.hs
tests/aiken/bar/: .gitignore  aiken.toml  plutus.json
tests/mock-blueprints/: simple-blueprint.json
tests/mock-configs/: core-blockfrost-custom.json  core-blockfrost.json  core-dbsync.json  core-local.json  core-maestro.json
tests/mock-data/: simple-script.json
tests/mock-utxos/: utxoAtAddress.json  utxoAtRef.json  utxosAddrComplex.json  utxosAddresses.json
(+66 files in other folders)
