cabal-version:      2.4
name:               atlas-cardano
version:            0.3.0
synopsis:           Application backend for Plutus smart contracts on Cardano
description:
  Atlas is an all-in-one, Haskell-native application backend for writing off-chain code for on-chain Plutus smart contracts.

license:            Apache-2.0
license-file:       LICENSE
copyright:          (c) 2023 GYELD GMBH
author:             Lars Bruenjes
maintainer:         support@geniusyield.co
build-type:         Simple
category:           Blockchain, Cardano, Framework
homepage:           https://github.com/geniusyield/atlas#readme
bug-reports:        https://github.com/geniusyield/atlas/issues
extra-source-files: README.md
tested-with:        GHC == 8.10.7

source-repository head
  type:     git
  location: https://github.com/geniusyield/atlas

common common
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wno-unticked-promoted-constructors

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits
  ghc-options:        -Wunused-packages

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    GeniusYield.Api.TestTokens
    GeniusYield.CardanoApi.EraHistory
    GeniusYield.CardanoApi.Query
    GeniusYield.Examples.Gift
    GeniusYield.Examples.Limbo
    GeniusYield.Examples.Treat
    GeniusYield.GYConfig
    GeniusYield.HTTP.Errors
    GeniusYield.Imports
    GeniusYield.Providers
    GeniusYield.Providers.CachedQueryUTxOs
    GeniusYield.Providers.CardanoDbSync
    GeniusYield.Providers.Common
    GeniusYield.Providers.GCP
    GeniusYield.Providers.Katip
    GeniusYield.Providers.LiteChainIndex
    GeniusYield.Providers.Maestro
    GeniusYield.Providers.Node
    GeniusYield.Providers.Sentry
    GeniusYield.Providers.SubmitApi
    GeniusYield.Scripts.TestToken
    GeniusYield.Test.Privnet.Asserts
    GeniusYield.Test.Privnet.Ctx
    GeniusYield.Test.Privnet.Examples
    GeniusYield.Test.Privnet.Examples.Gift
    GeniusYield.Test.Privnet.Examples.Oracle
    GeniusYield.Test.Privnet.Examples.Treat
    GeniusYield.Test.Privnet.Options
    GeniusYield.Test.Privnet.Paths
    GeniusYield.Test.Privnet.Setup
    GeniusYield.Test.Privnet.Utils
    GeniusYield.Test.Utils
    GeniusYield.Transaction
    GeniusYield.Transaction.CoinSelection
    GeniusYield.Transaction.CoinSelection.Types
    GeniusYield.Transaction.Common
    GeniusYield.TxBuilder
    GeniusYield.TxBuilder.Class
    GeniusYield.TxBuilder.Common
    GeniusYield.TxBuilder.Errors
    GeniusYield.TxBuilder.Node
    GeniusYield.TxBuilder.NodeQuery
    GeniusYield.TxBuilder.Random
    GeniusYield.TxBuilder.Run
    GeniusYield.Types
    GeniusYield.Types.Ada
    GeniusYield.Types.Address
    GeniusYield.Types.Datum
    GeniusYield.Types.Era
    GeniusYield.Types.Key
    GeniusYield.Types.Key.Class
    GeniusYield.Types.Ledger
    GeniusYield.Types.Logging
    GeniusYield.Types.NetworkId
    GeniusYield.Types.PlutusVersion
    GeniusYield.Types.Providers
    GeniusYield.Types.PubKeyHash
    GeniusYield.Types.Rational
    GeniusYield.Types.Redeemer
    GeniusYield.Types.Script
    GeniusYield.Types.Slot
    GeniusYield.Types.SlotConfig
    GeniusYield.Types.Time
    GeniusYield.Types.Tx
    GeniusYield.Types.TxBody
    GeniusYield.Types.TxIn
    GeniusYield.Types.TxOut
    GeniusYield.Types.TxOutRef
    GeniusYield.Types.UTxO
    GeniusYield.Types.Value
    GeniusYield.Types.Wallet

  other-modules:   GeniusYield.Utils
  build-depends:
    , aeson                  ^>=2.0.2.0
    , async                  ^>=2.2.4
    , attoparsec             ^>=0.13.2.5
    , base                   ^>=4.14.1.0
    , base16-bytestring      ^>=1.0.2.0
    , bytestring             ^>=0.10.12.0
    , cache                  ^>=0.1.3.0
    , cassava                ^>=0.5.3.0
    , cborg                  ^>=0.2.8.0
    , containers             ^>=0.6.5.1
    , deriving-aeson         ^>=0.2.8
    , directory              ^>=1.3.6.0
    , either                 ^>=5.0.2
    , filepath               ^>=1.4.2.1
    -- TODO: Version 1.2.1.1 of @fixed-vector@ has an important bug fix, need to upgrade to it.
    , fixed-vector           ^>=1.2.1.0
    , hashable               ^>=1.3.5.0
    , http-api-data          ^>=0.4.3
    , http-client            ^>=0.7.13.1
    , http-client-tls        ^>=0.3.6.1
    , http-media             ^>=0.8.0.0
    , http-types             ^>=0.12.3
    , indexed-traversable    ^>=0.1.2
    , katip                  ^>=0.8.7.2
    , lens                   ^>=5.0.1
    , MonadRandom            ^>=0.5.3
    , mtl                    ^>=2.2.2
    , network-uri            ^>=2.6.4.1
    , postgresql-simple      ^>=0.6.4
    , postgresql-simple-url  ^>=0.2.1.0
    , raven-haskell          ^>=0.1.4.1
    , resource-pool          ^>=0.2.3.2
    , scientific             ^>=0.3.7.0
    , serialise              ^>=0.2.6.0
    , servant                ^>=0.19
    , servant-client         ^>=0.19
    , servant-client-core    ^>=0.19
    , some                   ^>=1.0.2
    , sop-core               ^>=0.5.0.2
    , stm                    ^>=2.5.0.1
    , swagger2               ^>=2.8.4
    , tagged                 ^>=0.8.6.1
    , tasty                  ^>=1.4.2.3
    , tasty-hunit            ^>=0.10.0.3
    , tasty-quickcheck       ^>=0.10.2
    , template-haskell       ^>=2.16.0.0
    , text                   ^>=1.2.4.1
    , time                   ^>=1.9.3
    , transformers           ^>=0.5.6.2
    , unordered-containers   ^>=0.2.19.1
    , vector                 ^>=0.12.3.1
    , witherable             ^>=0.4.2

  -- Cardano libraries which are not on hackage. Their version is pinned in @cabal.project@ file.
  build-depends:
    , cardano-addresses
    , cardano-api
    , cardano-balance-tx
    , cardano-binary
    , cardano-coin-selection
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-byron
    , cardano-ledger-core
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-wallet-primitive
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network
    , plutus-ledger-api
    , plutus-tx
    , text-class

  -- Custom forks (version pinned by @source-repository-package@ stanza).
  build-depends:   plutus-simple-model

  -- needed for examples
  -- Version of @plutus-core@ is pinned in @cabal.project@ file.
  build-depends:   plutus-core
  build-depends:   framework-onchain-plutustx

library framework-onchain-plutustx
  default-language: Haskell2010
  ghc-options:      -Wall

  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors

  hs-source-dirs:   src-plutustx
  exposed-modules:
    GeniusYield.OnChain.Examples.ReadOracle
    GeniusYield.OnChain.Examples.ReadOracle.Compiled
    GeniusYield.OnChain.TestToken
    GeniusYield.OnChain.TestToken.Compiled

  build-depends:    base     ^>=4.14.1.0

  -- Cardano libraries which are not on hackage. Their version is pinned in @cabal.project@ file.
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

test-suite atlas-tests
  import:         common
  type:           exitcode-stdio-1.0
  main-is:        atlas-tests.hs
  hs-source-dirs: tests
  ghc-options:    -threaded -rtsopts -Wall

  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code -fplugin-opt
    PlutusTx.Plugin:defer-errors

  other-modules:
    GeniusYield.Test.CoinSelection
    GeniusYield.Test.Config
    GeniusYield.Test.GYTxBody
    GeniusYield.Test.GYTxSkeleton
    GeniusYield.Test.OnChain.GuessRefInputDatum
    GeniusYield.Test.OnChain.GuessRefInputDatum.Compiled
    GeniusYield.Test.Providers
    GeniusYield.Test.RefInput
    GeniusYield.Test.SlotConfig

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , aeson
    , atlas-cardano
    , base
    , bytestring
    , cardano-api
    , containers
    , directory
    , filepath
    , MonadRandom
    , mtl
    , ouroboros-consensus
    , plutus-ledger-api
    , plutus-simple-model
    , plutus-tx
    , plutus-tx-plugin
    , some
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , transformers

  -- Additional dependencies.
  build-depends:
    , QuickCheck             ^>=2.14.2
    , quickcheck-instances   ^>=0.3.28
    , tasty-golden           ^>=2.3.5

test-suite atlas-privnet-tests
  import:         common
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts
  hs-source-dirs: tests-privnet
  main-is:        atlas-privnet-tests.hs
  other-modules:

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , atlas-cardano
    , base
    , tasty
    , tasty-hunit
