cabal-version:      3.8
name:               atlas-cardano
version:            0.5.0
synopsis:           Application backend for Plutus smart contracts on Cardano
description:
  Atlas is an all-in-one, Haskell-native application backend for writing off-chain code for on-chain Plutus smart contracts.

license:            Apache-2.0
license-file:       LICENSE
copyright:          (c) 2023 GYELD GMBH
author:             Lars Bruenjes
maintainer:         support@geniusyield.co
build-type:         Simple
category:           Blockchain, Cardano, Framework
homepage:           https://github.com/geniusyield/atlas#readme
bug-reports:        https://github.com/geniusyield/atlas/issues
extra-source-files: README.md
tested-with:        GHC ==9.6.4

source-repository head
  type:     git
  location: https://github.com/geniusyield/atlas

common common
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    RecordWildCards
    RoleAnnotations
    TypeFamilies
    UndecidableInstances
    ViewPatterns

  ghc-options:        -Wall -Wincomplete-uni-patterns -Wunused-packages

  -- speed-ups GHCi considerably
  ghc-options:        -fno-show-valid-hole-fits

common plutus-ghc-options
  -- so unfoldings are present even when compiled without optmizations
  ghc-options:
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -Wno-partial-type-signatures

  -- expose all unfoldings, so plutustx compiler can do its job
  ghc-options:
    -fexpose-all-unfoldings -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors

  -- set target plutus-core version
  ghc-options: -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library
  import:          common
  hs-source-dirs:  src
  exposed-modules:
    GeniusYield.Api.TestTokens
    GeniusYield.CardanoApi.EraHistory
    GeniusYield.CardanoApi.Query
    GeniusYield.Examples.Common
    GeniusYield.Examples.Gift
    GeniusYield.Examples.Limbo
    GeniusYield.Examples.Treat
    GeniusYield.GYConfig
    GeniusYield.HTTP.Errors
    GeniusYield.Imports
    GeniusYield.Providers
    GeniusYield.Providers.Blockfrost
    GeniusYield.Providers.CachedQueryUTxOs
    GeniusYield.Providers.Common
    GeniusYield.Providers.GCP
    GeniusYield.Providers.Katip
    GeniusYield.Providers.Kupo
    GeniusYield.Providers.Maestro
    GeniusYield.Providers.Node
    GeniusYield.Providers.Sentry
    GeniusYield.ReadJSON
    GeniusYield.Scripts.TestToken
    GeniusYield.Swagger.Utils
    GeniusYield.Test.Privnet.Asserts
    GeniusYield.Test.Privnet.Ctx
    GeniusYield.Test.Privnet.Examples
    GeniusYield.Test.Privnet.Examples.Gift
    GeniusYield.Test.Privnet.Examples.Misc
    GeniusYield.Test.Privnet.Examples.Oracle
    GeniusYield.Test.Privnet.Examples.Treat
    GeniusYield.Test.Privnet.Paths
    GeniusYield.Test.Privnet.Setup
    GeniusYield.Test.Privnet.Utils
    GeniusYield.Test.Utils
    GeniusYield.Transaction
    GeniusYield.Transaction.CBOR
    GeniusYield.Transaction.CoinSelection
    GeniusYield.Transaction.CoinSelection.Types
    GeniusYield.Transaction.Common
    GeniusYield.TxBuilder
    GeniusYield.TxBuilder.Class
    GeniusYield.TxBuilder.Common
    GeniusYield.TxBuilder.Errors
    GeniusYield.TxBuilder.Node
    GeniusYield.TxBuilder.NodeQuery
    GeniusYield.TxBuilder.Random
    GeniusYield.TxBuilder.Run
    GeniusYield.Types
    GeniusYield.Types.Ada
    GeniusYield.Types.Address
    GeniusYield.Types.Certificate
    GeniusYield.Types.Credential
    GeniusYield.Types.Datum
    GeniusYield.Types.Era
    GeniusYield.Types.Key
    GeniusYield.Types.Key.Class
    GeniusYield.Types.Ledger
    GeniusYield.Types.Logging
    GeniusYield.Types.Natural
    GeniusYield.Types.NetworkId
    GeniusYield.Types.OpenApi
    GeniusYield.Types.PaymentKeyHash
    GeniusYield.Types.PlutusVersion
    GeniusYield.Types.Providers
    GeniusYield.Types.PubKeyHash
    GeniusYield.Types.Rational
    GeniusYield.Types.Redeemer
    GeniusYield.Types.Script
    GeniusYield.Types.Script.ScriptHash
    GeniusYield.Types.Script.SimpleScript
    GeniusYield.Types.Slot
    GeniusYield.Types.SlotConfig
    GeniusYield.Types.StakeAddressInfo
    GeniusYield.Types.StakeKeyHash
    GeniusYield.Types.StakePoolId
    GeniusYield.Types.Time
    GeniusYield.Types.Tx
    GeniusYield.Types.TxBody
    GeniusYield.Types.TxCert
    GeniusYield.Types.TxCert.Internal
    GeniusYield.Types.TxIn
    GeniusYield.Types.TxMetadata
    GeniusYield.Types.TxMetadata.Internal
    GeniusYield.Types.TxOut
    GeniusYield.Types.TxOutRef
    GeniusYield.Types.TxWdrl
    GeniusYield.Types.UTxO
    GeniusYield.Types.Value
    GeniusYield.Types.Wallet

  other-modules:   GeniusYield.Utils
  build-depends:
    , aeson                 ^>=2.1.2.1
    , attoparsec            ^>=0.14.4
    , base                  ^>=4.18.2.0
    , base16-bytestring     ^>=1.0.2.0
    , blockfrost-client     ^>=0.8.0.1
    , bytestring            ^>=0.11.4.0
    , cache                 ^>=0.1.3.0
    , cassava               ^>=0.5.3.0
    , cborg                 ^>=0.2.9.0
    , containers            ^>=0.6.5.1
    , data-default          ^>=0.7.1.1
    , deriving-aeson        ^>=0.2.9
    , directory             ^>=1.3.6.2
    , either                ^>=5.0.2
    , filepath              ^>=1.4.2.2
    , fixed-vector          ^>=1.2.2.1
    , hashable              ^>=1.4.2.0
    , http-api-data         ^>=0.6
    , http-client           ^>=0.7.13.1
    , http-client-tls       ^>=0.3.6.1
    , http-types            ^>=0.12.3
    , indexed-traversable   ^>=0.1.2.1
    , katip                 ^>=0.8.7.4
    , lens                  ^>=5.2.3
    , MonadRandom           ^>=0.6
    , mtl                   ^>=2.3.1
    , network-uri           ^>=2.6.4.2
    , postgresql-simple     ^>=0.7.0.0
    , raven-haskell         ^>=0.1.4.1
    , safe-money            ^>=0.9.1
    , scientific            ^>=0.3.7.0
    , servant               ^>=0.20.1
    , servant-client        ^>=0.20
    , servant-client-core   ^>=0.20
    , some                  ^>=1.0.5
    , swagger2              ^>=2.8.7
    , tasty                 ^>=1.4.3
    , tasty-hunit           ^>=0.10.0.3
    , tasty-quickcheck      ^>=0.10.2
    , template-haskell      ^>=2.20.0.0
    -- text won't work 2.1.1
    , text                  ^>=2.0.2
    , time                  ^>=1.12.2
    , transformers          ^>=0.6.1.0
    , unordered-containers  ^>=0.2.19.1
    , vector                ^>=0.13.1.0
    , witherable            ^>=0.4.2

  -- Dependencies whose version is fixed/constrained by @cabal.project@ file.
  build-depends:
    , bech32
    , maestro-sdk
    , openapi3

  -- -- Custom forks (version pinned by @source-repository-package@ stanza in @cabal.project@ file).
  -- build-depends:
  --   , cardano-simple
  --   , plutus-simple-model

  -- Cardano libraries which are not on hackage. Their version is pinned in @cabal.project@ file or derived from other related dependencies.
  build-depends:
    , cardano-addresses
    , cardano-api
    , cardano-balance-tx
    , cardano-coin-selection
    , cardano-crypto-class
    , cardano-ledger-alonzo
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-core:{cardano-ledger-core, testlib}
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-wallet-primitive
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-network-protocols
    , plutus-ledger-api
    , plutus-tx
    , text-class

  -- needed for examples
  -- Version of @plutus-core@ is pinned in @cabal.project@ file.
  build-depends:   plutus-core
  build-depends:   atlas-cardano:framework-onchain-plutustx

library framework-onchain-plutustx
  import:          common, plutus-ghc-options
  hs-source-dirs:  src-plutustx
  exposed-modules:
    GeniusYield.OnChain.AStakeValidator
    GeniusYield.OnChain.AStakeValidator.Compiled
    GeniusYield.OnChain.Examples.ReadOracle
    GeniusYield.OnChain.Examples.ReadOracle.Compiled
    GeniusYield.OnChain.TestToken
    GeniusYield.OnChain.TestToken.Compiled

  build-depends:   base ^>= 4.18.1.0

  -- Cardano libraries which are not on hackage. Their version is pinned in @cabal.project@ file.
  build-depends:
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

test-suite atlas-tests
  import:         common, plutus-ghc-options
  type:           exitcode-stdio-1.0
  main-is:        atlas-tests.hs
  hs-source-dirs: tests
  ghc-options:    -threaded -rtsopts -Wall

  -- set target plutus-core version
  ghc-options:    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0
  other-modules:
    GeniusYield.Test.CoinSelection
    GeniusYield.Test.Config
    GeniusYield.Test.GYTxBody
    GeniusYield.Test.GYTxSkeleton
    GeniusYield.Test.OnChain.GuessRefInputDatum
    GeniusYield.Test.OnChain.GuessRefInputDatum.Compiled
    GeniusYield.Test.Providers
    GeniusYield.Test.Providers.Mashup
    GeniusYield.Test.RefInput
    GeniusYield.Test.SlotConfig
    GeniusYield.Test.Stake

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , aeson
    , atlas-cardano
    , base
    , bytestring
    , cardano-api
    -- , cardano-simple
    , containers
    , data-default
    , directory
    , filepath
    , http-api-data
    , maestro-sdk
    , MonadRandom
    , mtl
    , ouroboros-consensus
    , plutus-ledger-api
    -- , plutus-simple-model
    , plutus-tx
    , plutus-tx-plugin
    , some
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , text
    , time
    , transformers

  -- Additional dependencies.
  build-depends:
    , QuickCheck            ^>=2.14
    , quickcheck-instances  ^>=0.3
    , tasty-golden          ^>=2.3

test-suite atlas-privnet-tests
  import:         common
  type:           exitcode-stdio-1.0
  ghc-options:    -threaded -rtsopts
  hs-source-dirs: tests-privnet
  main-is:        atlas-privnet-tests.hs
  other-modules:
    GeniusYield.Test.Privnet.SimpleScripts
    GeniusYield.Test.Privnet.Stake
    GeniusYield.Test.Privnet.Stake.Key
    GeniusYield.Test.Privnet.Stake.Utils
    GeniusYield.Test.Privnet.Stake.Validator

  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , atlas-cardano:{atlas-cardano, framework-onchain-plutustx}
    , base
    , containers
    , lens
    , tasty
    , tasty-hunit

test-suite suite
  import:         common
  type:           exitcode-stdio-1.0
  -- ghc-options:    -threaded -rtsopts
  ghc-options:
    -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas
    -Wno-partial-type-signatures
  -- expose all unfoldings, so plutustx compiler can do its job
    -fexpose-all-unfoldings
    -fobject-code
    -fplugin-opt PlutusTx.Plugin:defer-errors
  hs-source-dirs: suite
  main-is:        suite.hs
  other-modules:
    OnChain.BetRef
    OnChain.Compiled
    BetRef.Operations
    BetRef.Tests.PlaceBet
    BetRef.Tests.TakePot
  -- Dependencies inherited from the library. No need to specify bounds.
  build-depends:
    , atlas-cardano
    , base
    , containers
    , tasty
    , tasty-hunit
    , mtl
    , plutus-simple-model
    -- OnChain
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin
